<resources>

    <!-- Strings: -->
    <string name="app_name">Activity Generator</string>
    <string name="generate">Generate</string>
    <string name="new_word">New Word</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_about_us">About us</string>
    <string name="time_over">Over!</string>
    <string name="time_left">left</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="team_number">Team Number</string>
    <string name="point_limit">Point Limit</string>
    <string name="round_limit">Round Limit</string>
    <string name="settings">Settings</string>
    <string name="points">%s Points</string>
    <string name="switch_win">Reach Point Limit To Win</string>
    <string name="skip_limit">Skips per Round</string>
    <string name="infinite">infinite</string>
    <string name="play">play</string>

    <!-- Plurals: -->
    <plurals name="players">
        <item quantity="one">%s Player</item>
        <item quantity="other">%s Players</item>
    </plurals>

    <plurals name="skips">
        <item quantity="one">%s Skip</item>
        <item quantity="other">%s Skips</item>
    </plurals>


    <!-- Other (unused) stuff, but maybe later useful -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="team_3">Team 3</string>
    <string name="team_4">Team 4</string>
    <string name="jobimage">JobImage</string>


</resources>
